base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-shop
  namespace: tea-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea-shop
  template:
    metadata:
      labels:
        app: tea-shop
    spec:
      containers:
        - name: tea-shop
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tea-shop-html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: tea-shop-html
          configMap:
            name: tea-shop-html
