base/nontls-tea-shop.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tea-shop
  namespace: tea-shop
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tea.ehdf.com`)
      kind: Rule
      services:
        - name: tea-shop
          port: 80
